--- a/2023_Alexis/Sesion_11_Fisica.tex
+++ b/2023_Alexis/Sesion_11_Fisica.tex
@@ -32,7 +32,7 @@
 }
 
 \setbeamertemplate{navigation symbols}{}
-\date{1 de mayo}
+\date{4 de mayo}
 
 % \sisetup{math-rm=\symup,detect-all}
 \sisetup{detect-all, math-rm = \ensuremath}
@@ -282,7 +282,8 @@ Comenzamos de \textocolor{carmine}{izquierda a derecha}, siendo el punto de apli
 \pause
 \begin{eqnarray*}
 \begin{aligned}
-\nsum M = d_{1} \, R_{A} {-} d_{1} \, F_{1} {-} d_{2} \, F_{2} {-} d_{3} \, F_{3} {-} d_{4} \, F_{4} {+} d_{4} \, R_{B} {=} 0
+\nsum M &= d_{1} \, R_{A} {-} d_{1} \, F_{1} {-} d_{2} \, F_{2} - \\[0.5em] 
+&- (\SI{6}{\meter}) (W) {-} d_{3} \, F_{3} {-} d_{4} \, F_{4} {+} d_{4} \, R_{B} {=} 0
 \end{aligned}
 \end{eqnarray*}
 \end{frame}
@@ -290,7 +291,8 @@ Comenzamos de \textocolor{carmine}{izquierda a derecha}, siendo el punto de apli
 \frametitle{Sobre los signos}
 \begin{eqnarray*}
 \begin{aligned}
-\nsum M = d_{1} \, R_{A} {-} d_{1} \, F_{1} {-} d_{2} \, F_{2} {-} d_{3} \, F_{3} {-} d_{4} \, F_{4} {+} d_{4} \, R_{B} {=} 0
+\nsum M &= d_{1} \, R_{A} {-} d_{1} \, F_{1} {-} d_{2} \, F_{2} - \\[0.5em] 
+&- (\SI{6}{\meter}) (W) {-} d_{3} \, F_{3} {-} d_{4} \, F_{4} {+} d_{4} \, R_{B} {=} 0
 \end{aligned}
 \end{eqnarray*}
 \pause
@@ -320,21 +322,33 @@ Tenemos que:
 \pause
 \begin{eqnarray*}
 \begin{aligned}
-&\nsum M = \Cancel[red]{d_{1} \, R_{A}} {-} \Cancel[red]{d_{1} \, F_{1}} {-} d_{2} \, F_{2} {-} d_{3} \, F_{3} {-} d_{4} \, F_{4} {+} d_{4} \, R_{B} {=} 0 \\[0.5em] \pause
-&- (\SI{2}{\meter})(\SI{68}{\newton}) {-} (\SI{8}{\meter})(\SI{92}{\newton}) {-} (\SI{12}{\meter})(\SI{68}{\newton}) {+}  \\[0.5em]
-&+ (\SI{12}{\meter})(R_{B}) = 0 \\[0.5em] \pause
-& - \SI{136}{\meter\newton} - \SI{736}{\meter\newton} - \SI{816}{\meter\newton} + (\SI{12}{\meter})(R_{B}) = 0 \\[0.5em] \pause
-& - \SI{1688}{\meter\newton} + (\SI{12}{\meter})(R_{B}) = 0
+&\nsum M = \Cancel[red]{d_{1} \, R_{A}} {-} \Cancel[red]{d_{1} \, F_{1}} {-} d_{2} \, F_{2} - (\SI{6}{\meter}) (W) - \\[0.5em]
+&- d_{3} \, F_{3} {-} d_{4} \, F_{4} {+} d_{4} \, R_{B} {=} 0 \\[0.5em] \pause
+&- (\SI{2}{\meter})(\SI{68}{\newton}) - (\SI{6}{\meter}) (\SI{637.65}{\newton}) - (\SI{8}{\meter})(\SI{92}{\newton}) - \\
+&- (\SI{12}{\meter})(\SI{68}{\newton}) {+} (\SI{12}{\meter})(R_{B}) = 0 \\[0.5em] \pause
 \end{aligned}
 \end{eqnarray*}
 \end{frame}
 \begin{frame}
 \frametitle{Haciendo las cuentas}
+Seguimos con la expresión
+\begin{eqnarray*}
+\begin{aligned}  
+&- \SI{136}{\newton\meter} - \SI{3825.9}{\newton\meter} - \SI{736}{\newton\meter} - \SI{816}{\newton\meter} + \\[0.5em]
+&+ (\SI{12}{\meter})(R_{B}) = 0 \\[0.5em] \pause
+& - \SI{5513.9}{\newton\meter} + (\SI{12}{\meter})(R_{B}) = 0
+\end{aligned}
+\end{eqnarray*}
+\end{frame}
+\begin{frame}
+\frametitle{Haciendo las cuentas}
+Despejamos el valor de la reacción $R_{B}$:
+\pause
 \begin{eqnarray*}
 \begin{aligned}
-(\SI{12}{\meter})(R_{B}) &= - \SI{1688}{\meter\newton} \\[0.5em] \pause
-R_{B} &= \dfrac{\SI{1688}{\meter\newton}}{\SI{12}{\meter}} \\[0.5em] \pause
-R_{B} &= \SI{140.66}{\newton}
+(\SI{12}{\meter})(R_{B}) &= \SI{5513.9}{\newton\meter} \\[0.5em] \pause
+R_{B} &= \dfrac{\SI{5513.9}{\newton\meter}}{\SI{12}{\meter}} \\[0.5em] \pause
+R_{B} &= \SI{459.49}{\newton}
 \end{aligned}
 \end{eqnarray*}
 \end{frame}
@@ -358,7 +372,7 @@ Se tiene entonces que:
 \begin{eqnarray*}
 \begin{aligned}
 &\nsum_{i} F_{i} = 0 \\[0.5em] \pause
-&= R_{A} - F_{1} - F_{2} - F_{3} - F_{4} + R_{B} = 0
+&= R_{A} - F_{1} - F_{2} - W - F_{3} - F_{4} + R_{B} = 0
 \end{aligned}
 \end{eqnarray*}
 Los signos corresponden a la dirección que tiene cada una de las fuerzas involucradas.
@@ -369,8 +383,8 @@ Resolvemos la primera condición de equilibrio:
 \pause
 \begin{eqnarray*}
 \begin{aligned}
-&\nsum_{i} F_{i} = R_{A} - F_{1} - F_{2} - F_{3} - F_{4} + R_{B} = 0 \\[0.5em] \pause
-& R_{A} = F_{1} + F_{2} + F_{3} + F_{4} - R_{B} = 0
+&\nsum_{i} F_{i} = R_{A} - F_{1} - F_{2} - W - F_{3} - F_{4} + R_{B} = 0 \\[0.5em] \pause
+& R_{A} = F_{1} + F_{2} + W + F_{3} + F_{4} - R_{B} = 0
 \end{aligned}
 \end{eqnarray*}  
 \end{frame}
@@ -380,9 +394,10 @@ Al ocupar los valores de las $F_{i}$ y de $R_{B}$:
 \pause
 \begin{eqnarray*}
 \begin{aligned}
-R_{A} &= F_{1} + F_{2} + F_{3} + F_{4} - R_{B} = \\[0.5em] \pause
-& = \SI{70}{\newton} + \SI{68}{\newton} + \SI{92}{\newton} + \SI{68}{\newton} - \SI{140.66}{\newton} = \\[0.5em] \pause
-R_{A} &= \SI{157.34}{\newton}
+R_{A} &= F_{1} + F_{2} + W + F_{3} + F_{4} - R_{B} = \\[0.5em] \pause
+& = \SI{70}{\newton} + \SI{68}{\newton} + \SI{637.65}{\newton} + \SI{92}{\newton} + \\[0.5em]
+&+ \SI{68}{\newton} - \SI{459.49}{\newton} = \\[0.5em] \pause
+R_{A} &= \SI{476.16}{\newton}
 \end{aligned}
 \end{eqnarray*}
 \end{frame}
@@ -390,8 +405,8 @@ R_{A} &= \SI{157.34}{\newton}
 \frametitle{Solución al Ejercicio 9}
 Hemos obtenido el valor de las reacciones debajo de la viga:
 \begin{align*}
-R_{A} &= \SI{157.34}{\newton} \\[0.5em]
-R_{B} &= \SI{140.66}{\newton}
+R_{A} &= \SI{476.16}{\newton} \\[0.5em]
+R_{B} &= \SI{459.49}{\newton}
 \end{align*}
 \end{frame}
 
@@ -433,176 +448,176 @@ El peso de la viga es de \SI{70}{\newton} y tiene una longitud de \SI{20}{\meter
 \pause
 Notemos que el punto de apoyo del lado derecho, no se encuentra en el extremo derecho de la viga.
 \end{frame}
-\begin{frame}
-\frametitle{Siguiendo los pasos}
-Nuevamente repetimos los pasos para resolver el ejercicio, de esta manera tendremos de manera organizada el procedimiento.
-\end{frame}
-\begin{frame}
-\frametitle{Paso 1. Elaborando el DCL}
-El enunciado ya nos indica el peso $W$ de la viga, por lo que nuestro DCL queda como:
-\pause
-\begin{figure}
-  \centering
-  \begin{tikzpicture}[scale=0.9]
-    \draw [fill, color=bronze, draw=black] (0, 0) rectangle (9, 0.25);
-    \draw [-stealth, thick] (0, -1.5) -- (0, 0) node [left, midway] {\small{$\vb{R}_{A}$}};
-    \draw [-stealth, thick] (7, -1.5) -- (7, 0) node [right, midway] {\small{$\vb{R}_{B}$}};
+% \begin{frame}
+% \frametitle{Siguiendo los pasos}
+% Nuevamente repetimos los pasos para resolver el ejercicio, de esta manera tendremos de manera organizada el procedimiento.
+% \end{frame}
+% \begin{frame}
+% \frametitle{Paso 1. Elaborando el DCL}
+% El enunciado ya nos indica el peso $W$ de la viga, por lo que nuestro DCL queda como:
+% \pause
+% \begin{figure}
+%   \centering
+%   \begin{tikzpicture}[scale=0.9]
+%     \draw [fill, color=bronze, draw=black] (0, 0) rectangle (9, 0.25);
+%     \draw [-stealth, thick] (0, -1.5) -- (0, 0) node [left, midway] {\small{$\vb{R}_{A}$}};
+%     \draw [-stealth, thick] (7, -1.5) -- (7, 0) node [right, midway] {\small{$\vb{R}_{B}$}};
 
-    \draw [-stealth, thick] (0, 1.5) -- (0, 0.25);
-    \node at (0, 1.8) {\small{$F_{1}$}};
+%     \draw [-stealth, thick] (0, 1.5) -- (0, 0.25);
+%     \node at (0, 1.8) {\small{$F_{1}$}};
     
-    \draw [-stealth, thick] (2, 1.5) -- (2, 0.25);
-    \node at (2, 1.8) {\small{$F_{2}$}};
-    \draw [-stealth, <->] (0, 1.3) -- (2, 1.3) node [below, midway] {\small{$\SI{5}{\meter}$}};
+%     \draw [-stealth, thick] (2, 1.5) -- (2, 0.25);
+%     \node at (2, 1.8) {\small{$F_{2}$}};
+%     \draw [-stealth, <->] (0, 1.3) -- (2, 1.3) node [below, midway] {\small{$\SI{5}{\meter}$}};
 
-    \draw [-stealth, thick] (4.5, 0) -- (4.5, -2) node [left, midway] {\small{$W$}};
-    \draw (0, -2) -- (0, -2.4);
-    \draw (4.5, -2) -- (4.5, -2.4);
-    \draw [-stealth, <->](0, -2.2) -- (4.5, -2.2) node [above, midway] {\small{$\SI{10}{\meter}$}};
+%     \draw [-stealth, thick] (4.5, 0) -- (4.5, -2) node [left, midway] {\small{$W$}};
+%     \draw (0, -2) -- (0, -2.4);
+%     \draw (4.5, -2) -- (4.5, -2.4);
+%     \draw [-stealth, <->](0, -2.2) -- (4.5, -2.2) node [above, midway] {\small{$\SI{10}{\meter}$}};
 
-    \draw [-stealth, thick] (7, 1.5) -- (7, 0.25);
-    \node at (7, 1.8) {\small{$F_{3}$}};
+%     \draw [-stealth, thick] (7, 1.5) -- (7, 0.25);
+%     \node at (7, 1.8) {\small{$F_{3}$}};
     
-    \draw [-stealth, thick] (9, 1.5) -- (9, 0.25);
-    \node at (9, 1.8) {\small{$F_{4}$}};
+%     \draw [-stealth, thick] (9, 1.5) -- (9, 0.25);
+%     \node at (9, 1.8) {\small{$F_{4}$}};
     
-    \draw [-stealth, <->] (7, 1.3) -- (9, 1.3) node [below, midway] {\small{$\SI{3}{\meter}$}};
+%     \draw [-stealth, <->] (7, 1.3) -- (9, 1.3) node [below, midway] {\small{$\SI{3}{\meter}$}};
     
-    % \onslide<1->
-  \end{tikzpicture}
-\end{figure}
-\end{frame}
-\begin{frame}
-\frametitle{Siguiente paso}
-\textocolor{black}{2. Calculando los momentos.}
-Expresamos la segunda condición de equilibrio:
-\pause
-\begin{align*}
-\nsum_{i} M_{i} = 0
-\end{align*}
-Ocupando las fuerzas que se indican en el DCL.
-\end{frame}
-\begin{frame}
-\frametitle{Segunda condición de equilibrio}
-Por lo que:
-\pause
-\begin{eqnarray*}
-\begin{aligned}
-&\nsum_{i} M_{i} = 0 \\[0.5em] \pause
-&-d_{1} F_{1} + d_{1} R_{A} - d_{2} F_{2} - d_{3} F_{3} + d_{3} R_{B} - d_{4} F_{4} = 0 \\[0.5em] \pause
-&- d_{2} F_{2} - d_{3} F_{3} + d_{3} R_{B} - d_{4} F_{4} = 0 \\[0.5em] \pause
-&- (\SI{5}{\meter})(\SI{13}{\newton}) - (\SI{17}{\meter})(\SI{44}{\newton}) + \\[0.5em]
-&+ (\SI{17}{\meter})(R_{B}) - (\SI{20}{\meter})(\SI{22}{\newton}) = 0
-\end{aligned}
-\end{eqnarray*}
-\end{frame}
-\begin{frame}
-\frametitle{Segunda condición de equilibrio}
-\begin{eqnarray*}
-\begin{aligned}
-&- (\SI{5}{\meter})(\SI{13}{\newton}) - (\SI{17}{\meter})(\SI{44}{\newton}) + \\[0.5em]
-&+ (\SI{17}{\meter})(R_{B}) - (\SI{20}{\meter})(\SI{22}{\newton}) = 0 \\[0.5em] \pause
-& - \SI{65}{\meter\newton} - \SI{748}{\meter\newton} + (\SI{17}{\meter})(R_{B}) - \SI{440}{\meter\newton} = 0 \\[0.5em] \pause
-& - \SI{1253}{\meter\newton} + (\SI{17}{\meter})(R_{B}) = 0
-\end{aligned}
-\end{eqnarray*}
-\end{frame}
-\begin{frame}
-\frametitle{Obteniendo $R_{B}$}
-Despejamos el valor de $R_{B}$:
-\pause
-\begin{eqnarray*}
-\begin{aligned}
-- \SI{1253}{\meter\newton} + (\SI{17}{\meter})(R_{B}) &= 0 \\[0.5em] \pause
-(\SI{17}{\meter})(R_{B}) &= \SI{1253}{\meter\newton} \\[0.5em] \pause
-R_{B} &= \dfrac{\SI{1253}{\meter\newton}}{\SI{17}{\meter}} \\[0.5em] \pause
-R_{B} &= \SI{73.70}{\newton}
-\end{aligned}
-\end{eqnarray*}
-\end{frame}
-\begin{frame}
-\frametitle{Siguiente paso}
-\textocolor{black}{3. Usar la primera condición de equilibrio.}
-\\
-\bigskip
-\pause
-Para recuperar la reacción $\vb{R}_{A}$, aplicamos la primera condición de equilibrio:
-\pause
-\begin{align*}
-\nsum_{i} F_{i} = 0
-\end{align*}
-donde las $F_{i}$ son todas las fuerzas que actúan sobre la viga.
-\end{frame}
-\begin{frame}
-\frametitle{Primera condición de equilibrio}
-Se tiene entonces que:
-\pause
-\begin{eqnarray*}
-\begin{aligned}
-&\nsum_{i} F_{i} = 0 \\[0.5em] \pause
-&= R_{A} - F_{1} - F_{2} - F_{3} + R_{B} - F_{4} = 0
-\end{aligned}
-\end{eqnarray*}
-Los signos corresponden a la dirección que tiene cada una de las fuerzas involucradas.
-\end{frame}
-\begin{frame}
-\frametitle{Haciendo las cuentas}
-Sustituimos los valores de las fuerzas, para luego despejar $R_{A}$:
-\pause
-\begin{eqnarray*}
-\begin{aligned}
-&R_{A} - F_{1} - F_{2} - F_{3} + R_{B} - F_{4} = 0 \\[0.5em] \pause
-&R_{A} = F_{1} + F_{2} + F_{3} - R_{B} + F_{4} \\[0.5em] \pause
-&R_{A} = \SI{10}{\newton} + \SI{13}{\newton} + \SI{44}{\newton} - \SI{73.70}{\newton} + \SI{220}{\newton} \\[0.5em] \pause
-&R_{A} = \SI{213.30}{\newton}
-\end{aligned}
-\end{eqnarray*}
-\end{frame}
-\begin{frame}
-\frametitle{Solución al Ejercicio 10}
-Hemos obtenido el valor de las reacciones debajo de la viga:
-\begin{align*}
-R_{A} &= \SI{213.30}{\newton} \\[0.5em]
-R_{B} &= \SI{73.70}{\newton}
-\end{align*}
-\end{frame}
+%     % \onslide<1->
+%   \end{tikzpicture}
+% \end{figure}
+% \end{frame}
+% \begin{frame}
+% \frametitle{Siguiente paso}
+% \textocolor{black}{2. Calculando los momentos.}
+% Expresamos la segunda condición de equilibrio:
+% \pause
+% \begin{align*}
+% \nsum_{i} M_{i} = 0
+% \end{align*}
+% Ocupando las fuerzas que se indican en el DCL.
+% \end{frame}
+% \begin{frame}
+% \frametitle{Segunda condición de equilibrio}
+% Por lo que:
+% \pause
+% \begin{eqnarray*}
+% \begin{aligned}
+% &\nsum_{i} M_{i} = 0 \\[0.5em] \pause
+% &-d_{1} F_{1} + d_{1} R_{A} - d_{2} F_{2} - d_{3} F_{3} + d_{3} R_{B} - d_{4} F_{4} = 0 \\[0.5em] \pause
+% &- d_{2} F_{2} - d_{3} F_{3} + d_{3} R_{B} - d_{4} F_{4} = 0 \\[0.5em] \pause
+% &- (\SI{5}{\meter})(\SI{13}{\newton}) - (\SI{17}{\meter})(\SI{44}{\newton}) + \\[0.5em]
+% &+ (\SI{17}{\meter})(R_{B}) - (\SI{20}{\meter})(\SI{22}{\newton}) = 0
+% \end{aligned}
+% \end{eqnarray*}
+% \end{frame}
+% \begin{frame}
+% \frametitle{Segunda condición de equilibrio}
+% \begin{eqnarray*}
+% \begin{aligned}
+% &- (\SI{5}{\meter})(\SI{13}{\newton}) - (\SI{17}{\meter})(\SI{44}{\newton}) + \\[0.5em]
+% &+ (\SI{17}{\meter})(R_{B}) - (\SI{20}{\meter})(\SI{22}{\newton}) = 0 \\[0.5em] \pause
+% & - \SI{65}{\meter\newton} - \SI{748}{\meter\newton} + (\SI{17}{\meter})(R_{B}) - \SI{440}{\meter\newton} = 0 \\[0.5em] \pause
+% & - \SI{1253}{\meter\newton} + (\SI{17}{\meter})(R_{B}) = 0
+% \end{aligned}
+% \end{eqnarray*}
+% \end{frame}
+% \begin{frame}
+% \frametitle{Obteniendo $R_{B}$}
+% Despejamos el valor de $R_{B}$:
+% \pause
+% \begin{eqnarray*}
+% \begin{aligned}
+% - \SI{1253}{\meter\newton} + (\SI{17}{\meter})(R_{B}) &= 0 \\[0.5em] \pause
+% (\SI{17}{\meter})(R_{B}) &= \SI{1253}{\meter\newton} \\[0.5em] \pause
+% R_{B} &= \dfrac{\SI{1253}{\meter\newton}}{\SI{17}{\meter}} \\[0.5em] \pause
+% R_{B} &= \SI{73.70}{\newton}
+% \end{aligned}
+% \end{eqnarray*}
+% \end{frame}
+% \begin{frame}
+% \frametitle{Siguiente paso}
+% \textocolor{black}{3. Usar la primera condición de equilibrio.}
+% \\
+% \bigskip
+% \pause
+% Para recuperar la reacción $\vb{R}_{A}$, aplicamos la primera condición de equilibrio:
+% \pause
+% \begin{align*}
+% \nsum_{i} F_{i} = 0
+% \end{align*}
+% donde las $F_{i}$ son todas las fuerzas que actúan sobre la viga.
+% \end{frame}
+% \begin{frame}
+% \frametitle{Primera condición de equilibrio}
+% Se tiene entonces que:
+% \pause
+% \begin{eqnarray*}
+% \begin{aligned}
+% &\nsum_{i} F_{i} = 0 \\[0.5em] \pause
+% &= R_{A} - F_{1} - F_{2} - F_{3} + R_{B} - F_{4} = 0
+% \end{aligned}
+% \end{eqnarray*}
+% Los signos corresponden a la dirección que tiene cada una de las fuerzas involucradas.
+% \end{frame}
+% \begin{frame}
+% \frametitle{Haciendo las cuentas}
+% Sustituimos los valores de las fuerzas, para luego despejar $R_{A}$:
+% \pause
+% \begin{eqnarray*}
+% \begin{aligned}
+% &R_{A} - F_{1} - F_{2} - F_{3} + R_{B} - F_{4} = 0 \\[0.5em] \pause
+% &R_{A} = F_{1} + F_{2} + F_{3} - R_{B} + F_{4} \\[0.5em] \pause
+% &R_{A} = \SI{10}{\newton} + \SI{13}{\newton} + \SI{44}{\newton} - \SI{73.70}{\newton} + \SI{220}{\newton} \\[0.5em] \pause
+% &R_{A} = \SI{213.30}{\newton}
+% \end{aligned}
+% \end{eqnarray*}
+% \end{frame}
+% \begin{frame}
+% \frametitle{Solución al Ejercicio 10}
+% Hemos obtenido el valor de las reacciones debajo de la viga:
+% \begin{align*}
+% R_{A} &= \SI{213.30}{\newton} \\[0.5em]
+% R_{B} &= \SI{73.70}{\newton}
+% \end{align*}
+% \end{frame}
 
-\subsection{Ejercico 11 - Guía}
+% \subsection{Ejercico 11 - Guía}
 
-\begin{frame}
-\frametitle{Enunciado del Ejercicio 11}
-Encontrar las reacciones $\vb{R}_{A}$ y $\vb{R}_{B}$ a las que se encuentra sujeto el apoyo en la siguiente viga:
-\begin{figure}
-  \centering
-  \begin{tikzpicture}[scale=0.9]
-    \draw [fill, color=bronze, draw=black] (0, 0) rectangle (9, 0.25);
-    \draw [fill, color=brightturquoise, draw=black] (2, 0) -- (2.5, -0.5) -- (1.5, -0.5) node [below, midway, text=black] {\small{$\vb{R}_{A}$}} -- cycle;
-    \draw [fill, color=brightturquoise, draw=black] (7, 0) -- (7.5, -0.5) -- (6.5, -0.5) node [below, midway, text=black] {\small{$\vb{R}_{B}$}} -- cycle;
+% \begin{frame}
+% \frametitle{Enunciado del Ejercicio 11}
+% Encontrar las reacciones $\vb{R}_{A}$ y $\vb{R}_{B}$ a las que se encuentra sujeto el apoyo en la siguiente viga:
+% \begin{figure}
+%   \centering
+%   \begin{tikzpicture}[scale=0.9]
+%     \draw [fill, color=bronze, draw=black] (0, 0) rectangle (9, 0.25);
+%     \draw [fill, color=brightturquoise, draw=black] (2, 0) -- (2.5, -0.5) -- (1.5, -0.5) node [below, midway, text=black] {\small{$\vb{R}_{A}$}} -- cycle;
+%     \draw [fill, color=brightturquoise, draw=black] (7, 0) -- (7.5, -0.5) -- (6.5, -0.5) node [below, midway, text=black] {\small{$\vb{R}_{B}$}} -- cycle;
 
-    \draw [-stealth, thick] (0, 1.5) -- (0, 0.25);
-    \node at (0, 1.8) {\small{$F_{1} = \SI{7}{\newton}$}};
+%     \draw [-stealth, thick] (0, 1.5) -- (0, 0.25);
+%     \node at (0, 1.8) {\small{$F_{1} = \SI{7}{\newton}$}};
 
-    \draw [dashed] (2, 0.25) -- (2, 1.7);
-    \draw [-stealth, <->] (0, 1.3) -- (2, 1.3) node [below, midway] {\small{$\SI{5}{\meter}$}};
-    \draw [dashed] (3, 0.25) -- (3, 1.7);
-    \draw [-stealth, <->] (2, 1.3) -- (3, 1.3) node [below, midway] {\small{$\SI{2}{\meter}$}};
+%     \draw [dashed] (2, 0.25) -- (2, 1.7);
+%     \draw [-stealth, <->] (0, 1.3) -- (2, 1.3) node [below, midway] {\small{$\SI{5}{\meter}$}};
+%     \draw [dashed] (3, 0.25) -- (3, 1.7);
+%     \draw [-stealth, <->] (2, 1.3) -- (3, 1.3) node [below, midway] {\small{$\SI{2}{\meter}$}};
 
-    \draw [-stealth, thick] (3, 0.25) -- (4.73, 1);
-    \node at (4.5, 1.8) {\small{$F_{2} = \SI{16}{\newton}$}};
-    \draw (3.5, 0.25) arc(0:30:0.4);
-    \node at (4.5, 0.5) {\footnotesize{$\theta = \ang{30}$}};
+%     \draw [-stealth, thick] (3, 0.25) -- (4.73, 1);
+%     \node at (4.5, 1.8) {\small{$F_{2} = \SI{16}{\newton}$}};
+%     \draw (3.5, 0.25) arc(0:30:0.4);
+%     \node at (4.5, 0.5) {\footnotesize{$\theta = \ang{30}$}};
 
-    \draw [-stealth, thick] (7, 1.5) -- (7, 0.25);
-    \node at (7, 1.8) {\small{$F_{3} = \SI{26}{\newton}$}};
+%     \draw [-stealth, thick] (7, 1.5) -- (7, 0.25);
+%     \node at (7, 1.8) {\small{$F_{3} = \SI{26}{\newton}$}};
     
-    \draw [-stealth, thick] (9, 1.5) -- (9, 0.25);
-    \node at (9, 1.8) {\small{$F_{4} = \SI{10}{\newton}$}};
+%     \draw [-stealth, thick] (9, 1.5) -- (9, 0.25);
+%     \node at (9, 1.8) {\small{$F_{4} = \SI{10}{\newton}$}};
     
-    \draw [-stealth, <->] (7, 1.3) -- (9, 1.3) node [below, midway] {\small{$\SI{4}{\meter}$}};
+%     \draw [-stealth, <->] (7, 1.3) -- (9, 1.3) node [below, midway] {\small{$\SI{4}{\meter}$}};
     
-    % \onslide<1->
-  \end{tikzpicture}
-\end{figure}
-\end{frame}
+%     % \onslide<1->
+%   \end{tikzpicture}
+% \end{figure}
+% \end{frame}
 
 \end{document}
